--- a/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2.vcxproj
+++ b/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2.vcxproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -92,6 +93,7 @@
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="GMIT_Hackaton_Team2.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
