--- a/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2.vcxproj.filters
+++ b/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2.vcxproj.filters
@@ -19,6 +19,7 @@
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="ContactListener.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
