--- a/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2.vcxproj
+++ b/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2.vcxproj
@@ -96,6 +96,7 @@
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Unit_Manager.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
