--- a/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2.vcxproj.filters
+++ b/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2/GMIT_Hackaton_Team2.vcxproj.filters
@@ -23,6 +23,7 @@
     <ClInclude Include="ContactListener.h" />
     <ClInclude Include="Unit_Manager.hpp" />
     <ClInclude Include="Tower.h" />
+    <ClInclude Include="MyContactListener.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
